# smart-home

./: .gitignore  .ycm_extra_conf.py  LICENSE  README.md  build.sh  external.repos.yaml
charger_description/: CMakeLists.txt  package.xml
charger_description/launch/: view_charger.launch.py
charger_description/meshes/: bar.dae  base.dae  port.dae  tag.dae
charger_description/rviz/: view_robot.rviz
charger_description/urdf/: charger.urdf.xacro
face_module/face_detection_tc/: CMakeLists.txt  package.xml
face_module/ros-head-tracking/: CHANGELOG.rst  CMakeLists.txt  config.txt  mainpage.dox  package.xml  readme.txt
person_sim_shr/person_sim/: CMakeLists.txt  package.xml
pioneer_gazebo_ros/pioneer_control/: CMakeLists.txt
pioneer_gazebo_ros/pioneer_description/: CMakeLists.txt  package.xml
pioneer_gazebo_ros/pioneer_ros/: CMakeLists.txt  pioneer_controller_params.yaml
pioneer_navigation2/: CMakeLists.txt  package.xml
pioneer_navigation2/launch/: navigation2.launch.py
pioneer_navigation2/map/: map.pgm  map.yaml
pioneer_navigation2/param/: pioneer.yaml
pioneer_shr/: .clang-format  CMakeLists.txt  package.xml
pioneer_shr/cpr/: CMakeLists.txt
pioneer_shr/launch/: action_service_gazebo.launch  action_service_real.launch  action_service_real_hewitt139.launch  action_service_real_kings.launch  amcl_pioneer_shr.launch  amcl_pioneer_shr_real.launch  approach_person_service_gazebo.launch  approach_person_service_real_kings.launch  auto_navigation_gazebo.launch  auto_navigation_real_world.launch  auto_navigation_real_world_hewitt139.launch  auto_navigation_real_world_kings.launch  camera_real.launch  face_detection_gazebo.launch  face_detection_real.launch  face_recognition_gazebo.launch  face_recognition_gazebo_multi.launch  face_recognition_real.launch  face_recognition_real_multi.launch  joy_ctrl.launch  keyboard_ctrl.launch  move_base_gazebo.launch  move_base_real.launch  pioneer_gazebo.launch  pioneer_gazebo_mapping.launch  pioneer_shr_real.launch  pioneer_shr_real_mapping.launch  pioneer_shr_real_test.launch  pioneer_shr_sensors.launch  remote_ctrl_vis.launch  remote_vis.launch  rosaria_pioneer_shr.launch  rviz_pioneer_shr.launch  sensor_trigger_move2goal_gazebo.launch  sensor_trigger_move2goal_real.launch  sensor_trigger_move2goal_real_kings.launch  shr_gazebo.launch  shr_real.launch  shr_real_kings.launch  shr_real_kings_p1.launch  (+1 more)
pioneer_shr/maps/: Hewitt139.yaml  gazebo_small_world.yaml  hewittTPC.yaml  kingss108.yaml
pioneer_shr/resource/: alex_wait.txt  medicine_reminder.txt  midnight_warning.txt  playAudio.sh  playVideo.sh  warning-video-james.mkv
pioneer_shr/src/: approachPerson.cpp  approachPersonClient.cpp  approachPersonService.cpp  executive.cpp  goalPublisher.cpp  httpRequest.cpp  httpRequest.hpp  jasonParser.cpp  moveToService.cpp  preDefinedPose.hpp  skills.hpp
pioneer_shr_cpp/: CMakeLists.txt  package.xml
pioneer_shr_cpp/resources/: midnight_warning.txt  playMedicalNotify.sh
pioneer_shr_cpp/src/: '  approachPersonService.cpp  dbMonitorService.cpp  find_person_action.cpp  goalPublisher.cpp  jasonParser.hpp  moveToService.cpp  runScriptService.cpp
pioneer_shr_msg/: CMakeLists.txt  package.xml
pioneer_shr_msg/action/: CallRequest.action  OpenImageRequest.action  ReadScriptRequest.action  RecognizeRequest.action  RecognizeTrainRequest.action
pioneer_shr_msg/srv/: Action_Approach_Person.srv  Action_Monitoring_DB.srv  Action_Move_To.srv  Action_Run_Script.srv
pioneer_teleop/: CMakeLists.txt  package.xml
pioneer_teleop/config/: xbox.config.yaml
pioneer_teleop/launch/: pioneer_teleop.launch
pioneer_teleop/src/: pioneer_teleop.py
pioneer_test/: CMakeLists.txt  ESTOP  LICENSE  README.md  cancel_waypoint  how_to_launch_rocon_utm_demo  package.xml  pioneer_controller_params.yaml  pioneer_test_frontier_rviz_config.rviz  pioneer_test_rviz_config.rviz  pioneer_utm_test_rviz_config.rviz  run-hallway-pioneer  run-pioneer-robot  run-rosaria  run-utm-demo-hardware
pioneer_test/launch/: odom_to_map.launch  pioneer_controller.launch  pioneer_controller_spin_recover.launch  pioneer_sensors.launch  pioneer_test.launch  utm_traffic_description.launch
pioneer_test/map/: utm_hardware_demo0.yaml  utm_hardware_demo1.yaml  utm_hardware_demo2.yaml  utm_hardware_demo3.yaml  utm_hardware_demo4.yaml
pioneer_test/src/: OdomToMap.h  laser_tf_broadcaster.cpp  map_tf_broadcaster.cpp  odom_map_frame_publisher.cpp  pioneer3dx_odometry_publisher.cpp  pioneer3dx_pid_controller.cpp  pioneer3dx_tf_broadcaster.cpp  rplidar_laser_publisher.cpp  rplidar_laser_republisher.cpp  run-pioneer-utm-traffic  turn_robot_around.py
shr_actions_cpp/: CMakeLists.txt  package.xml
shr_actions_cpp/src/: docking_client.cpp  find_person_action.cpp  find_person_action_mod.cpp
shr_actions_py/: package.xml  setup.cfg  setup.py
shr_actions_py/shr_actions_py/: cancel_goal_client.py  check_person_bed_action.py  client.py  client_dock.py  deep_fake_action.py  detect_person_action.py  detect_person_left_house_action.py  docking_action.py  docking_main.py  localize.py  localize_old.py  localize_updated.py  make_call_action.py  nav2_zmq_action.py  nav_to_goal_action.py  navigate_with_localization_action_server.py  open_image_action.py  play_audio_action.py  play_video_action.py  read_script_action.py  recognize_face_action.py  rotate_action.py  send_text_action.py  undocking_action.py  wait_for_person_to_return_action.py  waypoint_follower_action.py
shr_msgs/: CMakeLists.txt  package.xml
shr_msgs/action/: CheckPersonInBedRequest.action  DeepFakeRequest.action  DockingRequest.action  EmptyRequest.action  GatherInformationRequest.action  LocalizeRequest.action  LocalizeRobot.action  NavigateToGoal.action  NavigateToPose.action  RotateRequest.action  TextRequest.action  WaypointRequest.action
shr_parameters/: CMakeLists.txt  package.xml
shr_plan/: CMakeLists.txt  package.xml
shr_resources/: CMakeLists.txt  package.xml
shr_utils/: CMakeLists.txt  package.xml
shr_world_state/: package.xml  setup.cfg  setup.py
yaml_tf_broadcaster/: CMakeLists.txt  package.xml
(+599 files in other folders)
