<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>charger_description</name>
    <version>0.0.0</version>
    <description>
        Description of charger
    </description>
    <maintainer email="TODO@gmail.com">
        TODO
    </maintainer>
    <license>TODO</license>
    <author>TODO</author>
    <buildtool_depend>ament_cmake</buildtool_depend>

    <exec_depend>joint_state_publisher</exec_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>rviz2</exec_depend>
    <exec_depend>xacro</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
