<?xml version="1.0"?>
<package>
  <name>pioneer_teleop</name>
  <version>0.0.1</version>
  <description>Simple teleop node for Pioneer 3DX</description>

  <maintainer email="erp48@cs.unh.edu">Estuardo Carpio</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>teleop_twist_joy</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>teleop_twist_joy</run_depend>

  <export>
  </export>
</package>
