<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>shr_actions_py</name>
  <version>0.0.0</version>
  <description>The pioneer_shr package</description>

  <maintainer email="gu@cs.unh.edu">tianyi</maintainer>
  <license>TODO</license>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- <depend>opencv-contrib-python</depend> -->
  <depend>action_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>vlc</depend>
  <depend>shr_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>gTTS</exec_depend>
  <exec_depend>twilio</exec_depend>
  <exec_depend>face_recognition</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
