<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>shr_plan</name>
    <version>0.0.0</version>
    <description>The rosplan_shr package</description>
    <maintainer email="gu@cs.unh.edu">tianyi</maintainer>
    <license>BSD-3-Clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>


    <depend>generate_parameter_library</depend>
    <depend>geometry_msgs</depend>
    <depend>nav2_msgs</depend>
    <depend>shr_msg</depend>
    <depend>plansys2_domain_expert</depend>
    <depend>plansys2_executor</depend>
    <depend>plansys2_msgs</depend>
    <depend>plansys2_pddl_parser</depend>
    <depend>plansys2_planner</depend>
    <depend>plansys2_problem_expert</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_action</depend>
    <depend>tf2_ros</depend>

    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>
    <exec_depend>plansys2_bringup</exec_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
